--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "test": "jest",
+    "start":"node src/index.js",
+    "dev":"nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "-": "^0.0.1",
-    "express": "^4.19.2",
-    "y": "^0.3.2"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
